WIP: Move from eager fetch optimization to late fetch optimization