@@ -24,20 +24,14 @@ package io.crate.planner.operators;
 
 import io.crate.expression.symbol.Symbol;
 
-import java.util.Collections;
 import java.util.List;
-
-import static io.crate.planner.operators.LogicalPlanner.extractColumns;
 
 public final class Distinct {
 
-    public static LogicalPlan.Builder create(LogicalPlan.Builder source, boolean distinct, List<Symbol> outputs) {
+    public static LogicalPlan create(LogicalPlan source, boolean distinct, List<Symbol> outputs) {
         if (!distinct) {
             return source;
         }
-        return (tableStats, hints, usedBeforeNextFetch) -> {
-            LogicalPlan sourcePlan = source.build(tableStats, hints, extractColumns(outputs));
-            return new GroupHashAggregate(sourcePlan, outputs, Collections.emptyList());
-        };
+        return new GroupHashAggregate(source, outputs, List.of());
     }
 }
